--- a/pic-sure-hpds-ui-extension-archetype/pom.xml
+++ b/pic-sure-hpds-ui-extension-archetype/pom.xml
@@ -14,9 +14,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>edu.harvard.hms.dbmi.avillach.picsure</groupId>
-			<artifactId>pic-sure-ui</artifactId>
+			<artifactId>pic-sure-hpds-ui</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<scope>provided</scope>
+			<type>jar</type>
 		</dependency>
 	</dependencies>
 
@@ -37,34 +38,5 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.1.1</version>
-				<executions>
-					<execution>
-						<id>unpack</id>
-						<phase>package</phase>
-						<goals>
-							<goal>unpack</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>edu.harvard.hms.dbmi.avillach.picsure</groupId>
-									<artifactId>pic-sure-hpds-ui</artifactId>
-									<version>1.0-SNAPSHOT</version>
-									<type>zip</type>
-									<classifier>archetype</classifier>
-									<overWrite>false</overWrite>
-									<outputDirectory>${project.basedir}/src/main/resources/archetype-resources/</outputDirectory>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
 	</build>
 </project>
