load base hpds ui from copdgene hpds ui

--- a/pic-sure-hpds-ui/pom.xml
+++ b/pic-sure-hpds-ui/pom.xml
@@ -8,66 +8,26 @@
 	<artifactId>pic-sure-hpds-ui</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
+	<packaging>jar</packaging>
+
 	<name>pic-sure-hpds-ui</name>
 
 	<dependencies>
 		<dependency>
-			<groupId>edu.harvard.hms.dbmi.avillach.picsure</groupId>
-			<artifactId>pic-sure-ui</artifactId>
+			<groupId>edu.harvard.hms.dbmi.avillach.picsure.hpds</groupId>
+			<artifactId>pic-sure-hpds-ui-libs</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>jstree</artifactId>
-			<version>3.3.7</version>
-		</dependency>
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>popper.js</artifactId>
-			<version>1.14.6</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>pic-sure-hpds-ui</finalName>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.1.1</version>
-				<executions>
-					<execution>
-						<id>unpack</id>
-						<phase>package</phase>
-						<goals>
-							<goal>unpack</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>edu.harvard.hms.dbmi.avillach.picsure</groupId>
-									<artifactId>pic-sure-ui</artifactId>
-									<version>1.0-SNAPSHOT</version>
-									<type>zip</type>
-									<classifier>webapp</classifier>
-									<overWrite>true</overWrite>
-									<outputDirectory>${project.build.directory}</outputDirectory>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-					<execution>
-						<id>unpack-dependencies</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/pic-sure-ui/webjars</outputDirectory>
-							<overWriteReleases>false</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<groupId>com.github.searls</groupId>
 				<artifactId>jasmine-maven-plugin</artifactId>
@@ -80,27 +40,13 @@
 					</execution>
 				</executions>
 				<configuration>
-					<additionalContexts>
-						<additionalContext>
-							<contextRoot>/</contextRoot>
-							<directory>src/main/javascript/pic-sure-ui-patches</directory>
-						</additionalContext>
-						<additionalContext>
-							<contextRoot>picsureui</contextRoot>
-							<directory>target/pic-sure-ui/picsureui</directory>
-						</additionalContext>
-						<additionalContext>
-							<contextRoot>picsureui/webjars</contextRoot>
-							<directory>target/pic-sure-ui/webjars</directory>
-						</additionalContext>
-					</additionalContexts>
 					<specRunnerTemplate>REQUIRE_JS</specRunnerTemplate>
 					<customRunnerConfiguration>src/test/javascript/require_config.txt</customRunnerConfiguration>
 					<preloadSources>
 						<source>webjars/requirejs/2.3.5/require.min.js</source>
 					</preloadSources>
 					<srcDirectoryName>/picsureui</srcDirectoryName>
-					<jsSrcDir>src/main/javascript/picsureui</jsSrcDir>
+					<jsSrcDir>src/main/webapp/picsureui</jsSrcDir>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -110,12 +56,52 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>3.1.0</version> 
-				<configuration> <descriptors> <descriptor>src/assembly/webapp-zip.xml</descriptor> 
-				<descriptor>src/assembly/archetype-assets.xml</descriptor> </descriptors> 
-				<attach>true</attach> <outputDirectory>target</outputDirectory> </configuration> 
-				<executions> <execution> <id>make-assembly</id> this is used for inheritance 
-				merges <phase>package</phase> bind to the packaging phase <goals> <goal>single</goal> 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.8</version>
+				<executions>
+					<execution>
+						<id>unpack-dependencies</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>unpack-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/webjars</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<descriptors>
+						<descriptor>src/assembly/webapp-zip.xml</descriptor>
+						<descriptor>src/assembly/archetype-assets.xml</descriptor>
+					</descriptors>
+					<attach>true</attach>
+					<outputDirectory>target</outputDirectory>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- bind to the packaging phase -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>3.1.0</version>
+				<configuration> <descriptors> <descriptor>src/assembly/webapp-zip.xml</descriptor>
+				<descriptor>src/assembly/archetype-assets.xml</descriptor> </descriptors>
+				<attach>true</attach> <outputDirectory>target</outputDirectory> </configuration>
+				<executions> <execution> <id>make-assembly</id> this is used for inheritance
+				merges <phase>package</phase> bind to the packaging phase <goals> <goal>single</goal>
 				</goals> </execution> </executions> </plugin> -->
 
 		</plugins>
