--- a/pic-sure-hpds-ui-extension-archetype/pom.xml
+++ b/pic-sure-hpds-ui-extension-archetype/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>edu.harvard.hms.dbmi.avillach.picsure</groupId>
+	<groupId>edu.harvard.hms.dbmi.avillach.picsure.hpds</groupId>
 	<artifactId>pic-sure-hpds-ui-extension-archetype</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>maven-archetype</packaging>
@@ -13,11 +13,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>edu.harvard.hms.dbmi.avillach.picsure</groupId>
+			<groupId>edu.harvard.hms.dbmi.avillach.picsure.hpds</groupId>
 			<artifactId>pic-sure-hpds-ui</artifactId>
 			<version>1.0-SNAPSHOT</version>
-			<scope>provided</scope>
-			<type>jar</type>
 		</dependency>
 	</dependencies>
 
@@ -38,5 +36,35 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.1.1</version>
+				<executions>
+					<execution>
+						<id>unpack</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>edu.harvard.hms.dbmi.avillach.picsure.hpds</groupId>
+									<artifactId>pic-sure-hpds-ui</artifactId>
+									<version>1.0-SNAPSHOT</version>
+									<type>zip</type>
+									<classifier>archetype</classifier>
+									<overWrite>false</overWrite>
+									<outputDirectory>${project.basedir}/src/main/resources/archetype-resources/</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 </project>
