--- a/pic-sure-hpds-ui-libs/pom.xml
+++ b/pic-sure-hpds-ui-libs/pom.xml
@@ -4,11 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>edu.harvard.hms.dbmi.avillach.picsure</groupId>
+	<groupId>edu.harvard.hms.dbmi.avillach.picsure.hpds</groupId>
 	<artifactId>pic-sure-hpds-ui-libs</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
-	<name>pic-sure-ui-libs</name>
+	<name>pic-sure-hpds-ui-libs</name>
 
 	<dependencies>
 		<dependency>
