--- a/pic-sure-hpds-ui/docker-compose.yml
+++ b/pic-sure-hpds-ui/docker-compose.yml
@@ -8,17 +8,13 @@ services:
       - 80
       - 443
     ports:
-      - 82:80
-      - 445:443
+      - 80:80
+      - 443:443
     networks:
-      - udn-hpds
+      - public
     volumes:
-      - ./target/pic-sure-ui/webjars/META-INF/resources/webjars/:/usr/local/apache2/htdocs/webjars
-      - ./target/pic-sure-ui:/usr/local/apache2/htdocs
-      - ./src/main/javascript/overrides:/usr/local/apache2/htdocs/overrides
-      - ./src/main/javascript/hpds:/usr/local/apache2/htdocs/hpds
-      - ./src/main/resources:/usr/local/apache2/htdocs/settings
+      - ./src/main/webapp/picsureui:/usr/local/apache2/htdocs/picsureui
+      - ./target/webjars/META-INF/resources/webjars:/usr/local/apache2/htdocs/picsureui/webjars
+      - ./src/main/resources:/usr/local/apache2/htdocs/picsureui/settings
 networks:
-  udn-hpds:
-    external:
-      name: udn-hpds
+  public:
