--- a/pic-sure-hpds-ui/src/main/resources/settings.json
+++ b/pic-sure-hpds-ui/src/main/resources/settings.json
@@ -1,12 +1,12 @@
 {
   "resources":[
 		{
-			"id" : "UDN",
-			"name" : "UDN",
+			"id" : "foo",
+			"name" : "bar",
 			"basePath" : "/picsure",
 			"findPath" : "/PIC-SURE/search"
 		}
 		],
-  "helpLink": "mailto:udn@hms.harvard.edu",
+  "helpLink": "",
   "advancedSearchLink": "/transmart"
 }
