--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>edu.harvard.hms.dbmi.avillach.picsure</groupId>
+	<groupId>edu.harvard.hms.dbmi.avillach.picsure.hpds</groupId>
 	<artifactId>pic-sure-hpds-ui-parent</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<name>pic-sure-ui-parent</name>
+	<name>pic-sure-hpds-ui-parent</name>
 	<modules>
 		<module>pic-sure-hpds-ui</module>
 		<module>pic-sure-hpds-ui-libs</module>
 		<module>pic-sure-hpds-ui-extension-archetype</module>
-	</modules>	
+	</modules>
 </project>
