--- a/pic-sure-hpds-ui-libs/pom.xml
+++ b/pic-sure-hpds-ui-libs/pom.xml
@@ -71,5 +71,10 @@
 			<artifactId>auth0-lock</artifactId>
 			<version>11.2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jstree</artifactId>
+			<version>3.3.7</version>
+		</dependency>
 	</dependencies>
 </project>
