--- a/pic-sure-hpds-ui/httpd/httpd-vhosts.conf
+++ b/pic-sure-hpds-ui/httpd/httpd-vhosts.conf
@@ -1,4 +1,5 @@
-Listen 443
+Listen 0.0.0.0:80
+Listen 0.0.0.0:443
 
 ##
 ##  SSL Global Context
@@ -28,18 +29,35 @@ SSLSessionCacheTimeout  300
 
 Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
 
-<VirtualHost _default_:80>
-    ProxyRequests On
-    ProxyTimeout 120
-    ProxyPreserveHost On
+<VirtualHost *:80>
+	ServerName localhost
+	RewriteEngine On
+	ProxyPreserveHost On
+	RewriteCond ${HTTPS} off [OR]
+	RewriteCond %{HTTP_HOST} ^(?:)?(.+)$ [NC]
+	RewriteRule ^ https://%1%{REQUEST_URI} [L,NE,R=301]
+</VirtualHost>
+
+<VirtualHost _default_:443>
     SSLProxyEngine on
     SSLProxyCheckPeerCN off
+    SSLCertificateFile "${HTTPD_PREFIX}/cert/server.crt"
+    SSLCertificateKeyFile "${HTTPD_PREFIX}/cert/server.key"
+    SSLCertificateChainFile "${HTTPD_PREFIX}/cert/server.chain"
 
     RewriteEngine On
-    RewriteRule ^/pic-sure/(.*)$ "http://udn-pic-sure_picsure2_1_aa4955a08eb9:8080/pic-sure-api-war/$1" [P]
-    RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f 
+    ProxyPreserveHost On
+
+    RewriteRule ^/picsure/(.*)$ "https://wildfly:8080/pic-sure-api-2/PICSURE/$1" [P]
+
+    RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
-    RewriteRule (.*) /index.html [L]
+
+    RewriteRule /picsureui/(.*) /picsureui/index.html [C]
+    RewriteRule ^/static/(.*)$ /static/$1 [L]
+
+    RedirectMatch ^/$ /picsureui/
+    ErrorDocument 404 /index.html
 
     DocumentRoot "${HTTPD_PREFIX}/htdocs"
 
@@ -52,4 +70,3 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
          nokeepalive ssl-unclean-shutdown \
          downgrade-1.0 force-response-1.0
 </VirtualHost>
-
