fixing archetype build issues

--- a/pic-sure-hpds-ui-extension-archetype/.gitignore
+++ b/pic-sure-hpds-ui-extension-archetype/.gitignore
@@ -19,4 +19,4 @@ target/
 tomcat/build
 
 # These assets are copied in as part of the build to always be up to date
-src/
+src/main/resources/archetype-resources
