--- a/pic-sure-hpds-ui-extension-archetype/pom.xml
+++ b/pic-sure-hpds-ui-extension-archetype/pom.xml
@@ -32,7 +32,7 @@
 			<plugins>
 				<plugin>
 					<artifactId>maven-archetype-plugin</artifactId>
-					<version>2.4</version>
+					<version>3.1.1</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -45,7 +45,7 @@
 				<executions>
 					<execution>
 						<id>unpack</id>
-						<phase>generate-sources</phase>
+						<phase>clean</phase>
 						<goals>
 							<goal>unpack</goal>
 						</goals>
