picsure 302/371 base query template UI update

--- a/pic-sure-hpds-ui/src/main/resources/settings.json
+++ b/pic-sure-hpds-ui/src/main/resources/settings.json
@@ -8,6 +8,7 @@
 		}
 		],
   "picSureResourceId":"",
+  "applicationIdForBaseQuery":"",
   "helpLink": "about:blank",
   "advancedSearchLink": ""
 }
