--- a/pic-sure-hpds-ui-libs/pom.xml
+++ b/pic-sure-hpds-ui-libs/pom.xml
@@ -17,6 +17,11 @@
 			<version>1.8.3</version>
 		</dependency>
 		<dependency>
+    			<groupId>org.webjars</groupId>
+ 			<artifactId>jquery</artifactId>
+    			<version>3.4.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
 			<version>3.3.7-1</version>
