--- a/pic-sure-hpds-ui/httpd/httpd-vhosts.conf
+++ b/pic-sure-hpds-ui/httpd/httpd-vhosts.conf
@@ -49,14 +49,18 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
     ProxyPreserveHost On
 
     RewriteRule ^/picsure/(.*)$ "https://wildfly:8080/pic-sure-api-2/PICSURE/$1" [P]
+    RewriteRule ^/psama/(.*)$ "http://picsureauth:8080/pic-sure-auth-services/auth/$1" [P]
 
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
+    RewriteRule ^/psamaui/(.*)$ /psamaui/index.html [L]
 
     RewriteRule /picsureui/(.*) /picsureui/index.html [C]
     RewriteRule ^/static/(.*)$ /static/$1 [L]
+    RewriteRule ^/psamaui/(.*)$ /psamaui/index.html [C]
 
     RedirectMatch ^/$ /picsureui/
+    RedirectMatch ^/$ /psamaui/
     ErrorDocument 404 /index.html
 
     DocumentRoot "${HTTPD_PREFIX}/htdocs"
