ALS-1636: Minor changes from PR review

--- a/pic-sure-hpds-ui/httpd/httpd-vhosts.conf
+++ b/pic-sure-hpds-ui/httpd/httpd-vhosts.conf
@@ -54,9 +54,9 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
 
-    RewriteRule /picsureui/(.*) /picsureui/index_03272020.html [C]
+    RewriteRule /picsureui/(.*) /picsureui/index.html [C]
     RewriteRule ^/static/(.*)$ /static/$1 [L]
-    RewriteRule ^/psamaui/(.*)$ /picsureui/index_03272020.html [C]
+    RewriteRule ^/psamaui/(.*)$ /picsureui/index.html [C]
 
     RedirectMatch ^/$ /picsureui/
     ErrorDocument 404 /index.html
