ALS-1636: Unify header/footer/router across PSAMA and Application

--- a/pic-sure-hpds-ui/httpd/httpd-vhosts.conf
+++ b/pic-sure-hpds-ui/httpd/httpd-vhosts.conf
@@ -48,13 +48,15 @@ Mutex  "file:${HTTPD_PREFIX}/logs/ssl_mutex"
     RewriteEngine On
     ProxyPreserveHost On
 
-    RewriteRule ^/picsure/(.*)$ "https://wildfly:8080/pic-sure-api-2/PICSURE/$1" [P]
+    RewriteRule ^/picsure/(.*)$ "http://wildfly:8080/pic-sure-api-2/PICSURE/$1" [P]
+    RewriteRule ^/psama/(.*)$ "http://wildfly:8080/pic-sure-auth-services/auth/$1" [P]
 
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-f
     RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_FILENAME} !-d
 
     RewriteRule /picsureui/(.*) /picsureui/index.html [C]
     RewriteRule ^/static/(.*)$ /static/$1 [L]
+    RewriteRule ^/psamaui/(.*)$ /picsureui/index.html [C]
 
     RedirectMatch ^/$ /picsureui/
     ErrorDocument 404 /index.html
