update maven greoup ID for updated release

--- a/pic-sure-hpds-ui-libs/pom.xml
+++ b/pic-sure-hpds-ui-libs/pom.xml
@@ -67,7 +67,7 @@
 			<version>1.2.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.webjars.bower</groupId>
+			<groupId>org.webjars.npm</groupId>
 			<artifactId>auth0.js</artifactId>
 			<version>9.11.3</version>
 		</dependency>
