--- a/pic-sure-hpds-ui-libs/pom.xml
+++ b/pic-sure-hpds-ui-libs/pom.xml
@@ -68,7 +68,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.npm</groupId>
-			<artifactId>auth0.js</artifactId>
+			<artifactId>auth0-js</artifactId>
 			<version>9.11.3</version>
 		</dependency>
 		<dependency>
