Add two default settings to disable data export button

--- a/pic-sure-hpds-ui/src/main/resources/settings.json
+++ b/pic-sure-hpds-ui/src/main/resources/settings.json
@@ -10,5 +10,7 @@
   "picSureResourceId":"",
   "applicationIdForBaseQuery":"",
   "helpLink": "about:blank",
-  "advancedSearchLink": ""
+  "advancedSearchLink": "",
+  "queryExportType":"EXPORT_DISABLED",
+  "queryButtonLabel":"Request Data"
 }
