--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/settings/settings.json
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/settings/settings.json
@@ -1,5 +1,6 @@
 {
   "customizeAuth0Login": true,
+  "auth0domain":"__AUTH0_DOMAIN__",
   "client_id": "__AUTH0_CLIENT_ID__",
   "resources": [
     {
