--- a/pic-sure-hpds-ui-libs/pom.xml
+++ b/pic-sure-hpds-ui-libs/pom.xml
@@ -86,5 +86,10 @@
 		    <artifactId>datatables</artifactId>
 		    <version>1.10.25</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>plotly.js-dist-min</artifactId>
+			<version>2.12.1</version>
+		</dependency>
 	</dependencies>
 </project>
