--- a/pic-sure-hpds-ui-libs/pom.xml
+++ b/pic-sure-hpds-ui-libs/pom.xml
@@ -91,5 +91,10 @@
 			<artifactId>plotly.js-dist-min</artifactId>
 			<version>2.12.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>6.1.2</version>
+		</dependency>
 	</dependencies>
 </project>
