--- a/pic-sure-hpds-ui-extension-archetype/src/main/resources/archetype-resources/src/main/resources/settings.json
+++ b/pic-sure-hpds-ui-extension-archetype/src/main/resources/archetype-resources/src/main/resources/settings.json
@@ -1,14 +1,31 @@
 {
-  "resources":[
+	"customizeAuth0Login": true,
+	"auth0domain":"__AUTH0_DOMAIN__",
+	"client_id": "__AUTH0_CLIENT_ID__",
+	"resources": [
 		{
-			"id" : "HPDS",
-			"name" : "HPDS",
+			"id" : "hpds",
+			"name" : "hpds",
 			"basePath" : "/picsure",
 			"findPath" : "/PIC-SURE/search"
 		}
-		],
-  "picSureResourceId":"",
-  "applicationIdForBaseQuery":"",
-  "helpLink": "about:blank",
-  "advancedSearchLink": ""
+	],
+	"picSureResourceId":"02e23f52-f354-4e8b-992c-d37c8b9ba140",
+	"applicationIdForBaseQuery":"8b5722c9-62fd-48d6-b0bf-4f67e53efb2b",
+	"helpLink": "mailto:sample@email.com",
+	"logoPath":"/static/images/logo.png",
+	"categoryAliases": {
+		"SOME_PATH" : "SOME_ALIAS"
+	},
+	"categorySearchResultList" : [
+		"SOME_PATH"
+	],
+	"pageTitle": "PIC-SURE",
+	"queryExportType":"EXPORT_IMMEDIATE",
+	"queryButtonLabel":"Export Data",
+	"defaultValues": {
+		"SOME_PATH" : "Value"
+	},
+	"variantExplorerStatus": "disabled",
+	"maxVariantCount": 100
 }
