--- a/pic-sure-hpds-ui-libs/pom.xml
+++ b/pic-sure-hpds-ui-libs/pom.xml
@@ -12,9 +12,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>underscorejs</artifactId>
-			<version>1.8.3</version>
+			<groupId>org.webjars.bowergithub.jashkenas</groupId>
+			<artifactId>underscore</artifactId>
+			<version>1.13.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
-			<version>3.4.1</version>
+			<version>5.2.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
