--- a/pic-sure-hpds-ui-libs/pom.xml
+++ b/pic-sure-hpds-ui-libs/pom.xml
@@ -12,14 +12,14 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>underscorejs</artifactId>
-			<version>1.8.3</version>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>underscore</artifactId>
+			<version>1.13.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
-			<version>3.6.1</version>
+			<version>3.6.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
@@ -27,9 +27,9 @@
 			<version>3.4.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>backbonejs</artifactId>
-			<version>1.3.3</version>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>backbone</artifactId>
+			<version>1.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
