--- a/pic-sure-hpds-ui/src/main/resources/settings.json
+++ b/pic-sure-hpds-ui/src/main/resources/settings.json
@@ -2,7 +2,7 @@
 	"customizeAuth0Login": true,
 	"auth0domain":"__AUTH0_DOMAIN__",
 	"client_id": "__AUTH0_CLIENT_ID__",
-	"analytics_id": "__ANALYTICS_ID__",
+	"analyticsId": "__ANALYTICS_ID__",
 	"resources": [
 		{
 			"id" : "hpds",
