--- a/pic-sure-hpds-ui/pom.xml
+++ b/pic-sure-hpds-ui/pom.xml
@@ -1,102 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>edu.harvard.hms.dbmi.avillach.picsure.hpds</groupId>
-	<artifactId>pic-sure-hpds-ui</artifactId>
-	<version>1.0-SNAPSHOT</version>
+    <groupId>edu.harvard.hms.dbmi.avillach.picsure.hpds</groupId>
+    <artifactId>pic-sure-hpds-ui</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-	<packaging>jar</packaging>
+    <packaging>jar</packaging>
 
-	<name>pic-sure-hpds-ui</name>
+    <name>pic-sure-hpds-ui</name>
 
-	<dependencies>
-		<dependency>
-			<groupId>edu.harvard.hms.dbmi.avillach.picsure.hpds</groupId>
-			<artifactId>pic-sure-hpds-ui-libs</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	<build>
-		<finalName>pic-sure-hpds-ui</finalName>
-		<plugins>
-			<plugin>
-				<groupId>com.github.searls</groupId>
-				<artifactId>jasmine-maven-plugin</artifactId>
-				<version>3.0-alpha-01</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<specRunnerTemplate>REQUIRE_JS</specRunnerTemplate>
-					<customRunnerConfiguration>src/test/javascript/require_config.txt</customRunnerConfiguration>
-					<preloadSources>
-						<source>webjars/requirejs/2.3.5/require.min.js</source>
-					</preloadSources>
-					<srcDirectoryName>/picsureui</srcDirectoryName>
-					<jsSrcDir>src/main/webapp/picsureui</jsSrcDir>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>io.github.bonigarcia</groupId>
-						<artifactId>webdrivermanager</artifactId>
-						<version>3.3.0</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.6.1</version>
-				<executions>
-					<execution>
-						<id>unpack-dependencies</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/webjars</outputDirectory>
-							<overWriteReleases>false</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>3.6.0</version>
-				<configuration>
-					<descriptors>
-						<descriptor>src/assembly/webapp-zip.xml</descriptor>
-						<descriptor>src/assembly/archetype-assets.xml</descriptor>
-					</descriptors>
-					<attach>true</attach>
-					<outputDirectory>target</outputDirectory>
-				</configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+    <dependencies>
+        <dependency>
+            <groupId>edu.harvard.hms.dbmi.avillach.picsure.hpds</groupId>
+            <artifactId>pic-sure-hpds-ui-libs</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    <build>
+        <finalName>pic-sure-hpds-ui</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+            </plugin>
+            <plugin>
+                <groupId>com.github.searls</groupId>
+                <artifactId>jasmine-maven-plugin</artifactId>
+                <version>3.0-alpha-01</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <specRunnerTemplate>REQUIRE_JS</specRunnerTemplate>
+                    <customRunnerConfiguration>src/test/javascript/require_config.txt</customRunnerConfiguration>
+                    <preloadSources>
+                        <source>webjars/requirejs/2.3.5/require.min.js</source>
+                    </preloadSources>
+                    <srcDirectoryName>/picsureui</srcDirectoryName>
+                    <jsSrcDir>src/main/webapp/picsureui</jsSrcDir>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>io.github.bonigarcia</groupId>
+                        <artifactId>webdrivermanager</artifactId>
+                        <version>3.3.0</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.1</version>
+                <executions>
+                    <execution>
+                        <id>unpack-dependencies</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>unpack-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/webjars</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <descriptors>
+                        <descriptor>src/assembly/webapp-zip.xml</descriptor>
+                        <descriptor>src/assembly/archetype-assets.xml</descriptor>
+                    </descriptors>
+                    <attach>true</attach>
+                    <outputDirectory>target</outputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
-		</plugins>
-	</build>
+        </plugins>
+    </build>
 </project>
