--- a/pic-sure-hpds-ui/src/main/resources/settings.json
+++ b/pic-sure-hpds-ui/src/main/resources/settings.json
@@ -28,5 +28,8 @@
 		"SOME_PATH" : "Value"
 	},
 	"variantExplorerStatus": "disabled",
-	"maxVariantCount": 100
+	"maxVariantCount": 100,
+	"idsToWaitFor": [
+		"search-results-container"
+	]
 }
