--- a/pic-sure-hpds-ui/src/main/resources/settings.json
+++ b/pic-sure-hpds-ui/src/main/resources/settings.json
@@ -29,6 +29,7 @@
 	},
 	"variantExplorerStatus": "disabled",
 	"maxVariantCount": 100,
+	"enableTour": true,
 	"idsToWaitFor": [
 		"search-results-container"
 	]
