[ALS-5317] Create a tour: Baseline (#173)
* init

* baseline tour working

* Add package data text

* Add enable/disable tour feature

* center the spinner a bit

* Fix search result row tour text

* Remove ACT stuff

* refactor start tour

* refactoring and allow html to be passed to the dialog

* Remove unused event

--- a/pic-sure-hpds-ui/src/main/resources/settings.json
+++ b/pic-sure-hpds-ui/src/main/resources/settings.json
@@ -28,5 +28,10 @@
 		"SOME_PATH" : "Value"
 	},
 	"variantExplorerStatus": "disabled",
-	"maxVariantCount": 100
+	"maxVariantCount": 100,
+	"enableTour": true,
+	"idsToWaitFor": [
+		"search-results-container"
+	],
+	"tourSearchTerm": "age"
 }
