[ALS-6165] Disable directory browsing (#199)
* [ALS-6165] Disable directory browsing in Dockerfile
The Dockerfile for pic-sure-hpds-ui has been modified to disable directory browsing. The httpd.conf file was changed to disallow the "Options Indexes FollowSymLinks" configuration, enhancing security by preventing unauthorized directory listings.

* [ALS-6165] Update sed for directory browsing
* Adjust Apache configuration in Dockerfiles

--- a/pic-sure-hpds-ui/Dockerfile
+++ b/pic-sure-hpds-ui/Dockerfile
@@ -17,6 +17,9 @@ RUN sed -i '/^#LoadModule rewrite_module modules\/mod_rewrite.so/s/^#//' ${HTTPD
 RUN sed -i '/^#LoadModule socache_shmcb_module modules\/mod_socache_shmcb.so/s/^#//' ${HTTPD_PREFIX}/conf/httpd.conf
 RUN mkdir /usr/local/apache2/logs/ssl_mutex
 
+# Disable directory browsing
+RUN sed -i 's/Options Indexes FollowSymLinks/Options -Indexes +FollowSymLinks/' ${HTTPD_PREFIX}/conf/httpd.conf
+
 COPY target/webjars/META-INF/resources/webjars /usr/local/apache2/htdocs/picsureui/webjars
 RUN sed -i 's/\.\.\/images\//\/picsureui\/webjars\/datatables\/1\.13\.5\/images\//g' ${HTTPD_PREFIX}/htdocs/picsureui/webjars/datatables/1.13.5/css/jquery.dataTables.min.css
 
