[ALS-0000] Configurable time series export

--- a/pic-sure-hpds-ui/src/main/resources/settings.json
+++ b/pic-sure-hpds-ui/src/main/resources/settings.json
@@ -22,6 +22,7 @@
 		"SOME_PATH"
 	],
 	"pageTitle": "PIC-SURE",
+	"timeSeriesExport": "FALSE",
 	"queryExportType":"EXPORT_IMMEDIATE",
 	"queryButtonLabel":"Export for analysis",
 	"defaultValues": {
