--- a/pic-sure-hpds-ui-extension-archetype/src/main/resources/archetype-resources/src/main/resources/settings.json
+++ b/pic-sure-hpds-ui-extension-archetype/src/main/resources/archetype-resources/src/main/resources/settings.json
@@ -21,6 +21,7 @@
 		"SOME_PATH"
 	],
 	"pageTitle": "PIC-SURE",
+	"timeSeriesExport": "FALSE",
 	"queryExportType":"EXPORT_IMMEDIATE",
 	"queryButtonLabel":"Export for analysis",
 	"defaultValues": {
